force-app/main/default/objects/Story__c.object
<CustomObject>
    <description>A user story is a statement of user functionality formulated as a few sentences in the everyday language of the user that can be completed within an iteration.  Used for Agile project management of Salesforce implementation</description>
    <fields>
        <fullName>Acceptance_Criteria_Tests__c</fullName>
        <description>Acceptance criteria and any basic testing instructions. What is the &quot;definition of done&quot; and how would someone test it to know it&apos;s working as designed. Consider your happy path and any edge cases. For more detailed testing, use the story&apos;s Testing tab.</description>
        <inlineHelpText>Acceptance criteria and any basic testing instructions. What is the &quot;definition of done&quot; and how would someone test it to know it&apos;s working as designed. Consider your happy path and any edge cases. For more detailed testing, use the story&apos;s Testing tab.</inlineHelpText>
        <label>Acceptance Criteria/Tests</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Actual_Points__c</fullName>
        <description>Actual level of effort to implement the story.</description>
        <inlineHelpText>Actual level of effort to implement the story.</inlineHelpText>
        <label>Actual Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assigned_Name__c</fullName>
        <description>Assigned Project Member&apos;s concatenated First and Last Names. Used only in LWCs (imhotepStoryList).</description>
        <formula>Assigned__r.User__r.FirstName &amp; &quot; &quot; &amp; Assigned__r.User__r.LastName</formula>
        <inlineHelpText>Assigned Project Member&apos;s concatenated First and Last Names. Used only in LWCs (imhotepStoryList).</inlineHelpText>
        <label>Assigned Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project member currently assigned to work on this story.</description>
        <inlineHelpText>Project member currently assigned to work on this story.</inlineHelpText>
        <label>Assigned</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Assigned user must be a member of this project.</errorMessage>
            <filterItems>
                <field>Project_Member__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Member__c</referenceTo>
        <relationshipLabel>Assigned Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Current_User__c</fullName>
        <description>Checked when the story is assigned to the current user.  Used as a filter for some list views.</description>
        <formula>Assigned__r.User__c = $User.Id</formula>
        <inlineHelpText>Checked when the story is assigned to the current user.  Used as a filter for some list views.</inlineHelpText>
        <label>Assigned to Current User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_from_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the story was created from a template.</description>
        <inlineHelpText>If checked, the story was created from a template.</inlineHelpText>
        <label>Created from Template?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deployment_Checklist__c</fullName>
        <description>Manual actions that must be taken to fully deploy changes (activate a flow, assign a permset, etc.).</description>
        <inlineHelpText>Manual actions that must be taken to fully deploy changes (activate a flow, assign a permset, etc.).</inlineHelpText>
        <label>Deployment Checklist</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimated_Points__c</fullName>
        <description>Estimated level of effort to implement the story.</description>
        <inlineHelpText>Estimated level of effort to implement the story.</inlineHelpText>
        <label>Estimated Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expedite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, expedited handling has been requested.</description>
        <inlineHelpText>If checked, expedited handling has been requested.</inlineHelpText>
        <label>Expedite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Metadata_Component_Changes__c</fullName>
        <description>Number of Metadata Changes related to this Story.</description>
        <inlineHelpText>Number of Metadata Changes related to this Story.</inlineHelpText>
        <label># Metadata Component Changes</label>
        <summaryForeignKey>Metadata_Component_Change__c.Story__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parent_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Story</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a story within the same project.</errorMessage>
            <filterItems>
                <field>Story__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Child Stories</relationshipLabel>
        <relationshipName>ChildStories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>Uses Estimated Points for Blocked, Defined, Building, and Testing stories; else uses Actual Points.</description>
        <formula>CASE(TEXT(Status__c),
&quot;Blocked&quot;, Estimated_Points__c,
&quot;Defined&quot;, Estimated_Points__c,
&quot;Building&quot;, Estimated_Points__c,
&quot;Testing&quot;, Estimated_Points__c,
Actual_Points__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Uses Estimated Points for Blocked, Defined, Building, and Testing stories; else uses Actual Points.</inlineHelpText>
        <label>Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Order__c</fullName>
        <description>Priority of this story within the release (should be continuously reassessed). Reorder stories from the release&apos;s Story List tab.</description>
        <inlineHelpText>Priority of this story within the release (should be continuously reassessed). Reorder stories from the release&apos;s Story List tab.</inlineHelpText>
        <label>Priority/Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to filter Release and Requested Release lookups.</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Mode_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this story will be unaffected by changes to the Release Mode setting on the related Release.  This allows you to set or restrict features for this individual story.  It is checked automatically when you change the story&apos;s record type, but you can check or uncheck it manually to control the override.</description>
        <inlineHelpText>If checked, this story will be unaffected by changes to the Release Mode setting on the related Release.  This allows you to set or restrict features for this individual story.  It is checked automatically when you change the story&apos;s record type, but you can check or uncheck it manually to control the override.</inlineHelpText>
        <label>Release Mode Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a release within the same project.</errorMessage>
            <filterItems>
                <field>Release__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Stories</relationshipLabel>
        <relationshipName>Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requested_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested Release</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a release within the same project.</errorMessage>
            <filterItems>
                <field>Release__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Stories (Requested Release)</relationshipLabel>
        <relationshipName>Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution_Build_Notes__c</fullName>
        <description>Working notes kept by the builder/developer on how they are implementing the story.</description>
        <inlineHelpText>Working notes kept by the builder/developer on how they are implementing the story.</inlineHelpText>
        <label>Solution/Build Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Defined&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Defined</fullName>
                    <default>true</default>
                    <label>Defined</label>
                </value>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story_Description__c</fullName>
        <description>User story/high-level requirement description.</description>
        <inlineHelpText>User story/high-level requirement description.</inlineHelpText>
        <label>Story/Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Story_Number__c</fullName>
        <displayFormat>S{000000}</displayFormat>
        <label>Story Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Story_Type__c</fullName>
        <label>Story Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Story</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Story_Number__c</columns>
        <columns>Project__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Assigned_Stories</fullName>
        <columns>Story_Number__c</columns>
        <columns>NAME</columns>
        <columns>Story_Type__c</columns>
        <columns>Project__c</columns>
        <columns>Release__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Estimated_Points__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Assigned Stories</label>
    </listViews>
    <listViews>
        <fullName>My_Assigned_Stories_Building</fullName>
        <columns>Story_Number__c</columns>
        <columns>NAME</columns>
        <columns>Story_Type__c</columns>
        <columns>Project__c</columns>
        <columns>Release__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Estimated_Points__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Building</value>
        </filters>
        <label>My Assigned Stories (Building)</label>
    </listViews>
    <listViews>
        <fullName>My_Assigned_Stories_Defined</fullName>
        <columns>Story_Number__c</columns>
        <columns>NAME</columns>
        <columns>Story_Type__c</columns>
        <columns>Project__c</columns>
        <columns>Release__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Estimated_Points__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_to_Current_User__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Defined</value>
        </filters>
        <label>My Assigned Stories (Defined)</label>
    </listViews>
    <listViews>
        <fullName>New_Stories_Last_7_Days</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Story_Number__c</columns>
        <columns>NAME</columns>
        <columns>Story_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>New Stories (Last 7 Days)</label>
    </listViews>
    <listViews>
        <fullName>Updated_Stories_Last_7_Days</fullName>
        <columns>CREATED_DATE</columns>
        <columns>Story_Number__c</columns>
        <columns>NAME</columns>
        <columns>Story_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Project__c</columns>
        <columns>Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Updated Stories (Last 7 Days)</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stories</pluralLabel>
    <recordTypes>
        <fullName>Simple</fullName>
        <active>true</active>
        <description>Use for projects that don&apos;t use advanced features (e.g. points, test scenarios, tracking metadata changes).</description>
        <label>Simple Story</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Use for projects that need access to all Imhotep features.  Default record type.</description>
        <label>Standard Story</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>